plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.0' apply false
    id 'maven-publish'
}

group = 'io.jeyong'
version = '1.1.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:3.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.0'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = project.group
            artifactId = 'jpa-nplus1-detector'
            version = project.version
        }
    }
}
